# w2_DataWork

./: README.md  pyproject.toml  requirements.txt
data/cache/: users_page_1.meta.json
data/processed/: _run_meta.json  analytics_table.parquet  orders_clean.parquet  users.parquet
notebooks/: eda.ipynb
reports/: revenue_by_country.csv  summary.md
scripts/: day1.py  run_day1_load.py  run_day2_clean.py  run_day3_build_analytics.py  run_etl.py
src/bootcamp_data/: __init__.py  config.py  etl.py  io.py  joins.py  quality.py  transforms.py
