[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bootcamp_data"
version = "0.1.0"
description = "E-Commerce Data Pipeline project"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "plotly",
    "kaleido",
    "numpy",
    "pyarrow"
]

[tool.setuptools.packages.find]
where = ["src"]